--- a/golabs/godata/go-gumball-riak/gumball/docker-compose.yml
+++ b/golabs/godata/go-gumball-riak/gumball/docker-compose.yml
@@ -56,6 +56,7 @@ services:
       - KONG_DATABASE=cassandra
       - KONG_CASSANDRA_CONTACT_POINTS=cassandra 
       - KONG_PG_HOST=cassandra
+    restart: always
   coordinator:
     image: basho/riak-kv
     networks:
